feat: support constrained resource yaml updates
